Add additional Jupyter Notebook env configurations/dependencies

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,18 +2,160 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7170c4f4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import sklearn as skl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a9607038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c61d7ffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userid</th>\n",
+       "      <th>user_state</th>\n",
+       "      <th>event_name</th>\n",
+       "      <th>event_attributes</th>\n",
+       "      <th>event_created_date</th>\n",
+       "      <th>event_platform</th>\n",
+       "      <th>device_manufacture</th>\n",
+       "      <th>device_model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>c95c777785faec8dd910d019d7278ebe</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Add Vehicle Success</td>\n",
+       "      <td>{\"Make\":\"Dodge\",\"Model\":\"Caravan\",\"Color\":\"Whi...</td>\n",
+       "      <td>2022-01-16 17:03:04</td>\n",
+       "      <td>android</td>\n",
+       "      <td>samsung</td>\n",
+       "      <td>SM-N975U</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c95c777785faec8dd910d019d7278ebe</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Add Vehicle Break</td>\n",
+       "      <td>{}</td>\n",
+       "      <td>2022-01-16 17:07:47</td>\n",
+       "      <td>android</td>\n",
+       "      <td>samsung</td>\n",
+       "      <td>SM-N975U</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>f344be2d9a042b7444f3cc5279e38ef1</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>Calculator View</td>\n",
+       "      <td>{}</td>\n",
+       "      <td>2022-01-16 17:16:25</td>\n",
+       "      <td>android</td>\n",
+       "      <td>samsung</td>\n",
+       "      <td>SM-G973U1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>c95c777785faec8dd910d019d7278ebe</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Add Payment Method Success</td>\n",
+       "      <td>{\"Payment Method\":\"Credit\",\"Tokenized Pay\":\"\"}</td>\n",
+       "      <td>2022-01-16 17:24:22</td>\n",
+       "      <td>android</td>\n",
+       "      <td>samsung</td>\n",
+       "      <td>SM-N975U</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e331ed81422d8fba55520a43a872e701</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Sign Up Success</td>\n",
+       "      <td>{\"Method\":\"Apple\"}</td>\n",
+       "      <td>2022-01-16 17:34:51</td>\n",
+       "      <td>ios</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>iPhone12,1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             userid user_state                  event_name  \\\n",
+       "0  c95c777785faec8dd910d019d7278ebe         CA         Add Vehicle Success   \n",
+       "1  c95c777785faec8dd910d019d7278ebe         CA           Add Vehicle Break   \n",
+       "2  f344be2d9a042b7444f3cc5279e38ef1         FL             Calculator View   \n",
+       "3  c95c777785faec8dd910d019d7278ebe         CA  Add Payment Method Success   \n",
+       "4  e331ed81422d8fba55520a43a872e701         IL             Sign Up Success   \n",
+       "\n",
+       "                                    event_attributes   event_created_date  \\\n",
+       "0  {\"Make\":\"Dodge\",\"Model\":\"Caravan\",\"Color\":\"Whi...  2022-01-16 17:03:04   \n",
+       "1                                                 {}  2022-01-16 17:07:47   \n",
+       "2                                                 {}  2022-01-16 17:16:25   \n",
+       "3     {\"Payment Method\":\"Credit\",\"Tokenized Pay\":\"\"}  2022-01-16 17:24:22   \n",
+       "4                                 {\"Method\":\"Apple\"}  2022-01-16 17:34:51   \n",
+       "\n",
+       "  event_platform device_manufacture device_model  \n",
+       "0        android            samsung     SM-N975U  \n",
+       "1        android            samsung     SM-N975U  \n",
+       "2        android            samsung    SM-G973U1  \n",
+       "3        android            samsung     SM-N975U  \n",
+       "4            ios              Apple   iPhone12,1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -25,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
